--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-native-rename",
   "version": "2.4.1",
   "description": "Rename react-native app with just one command",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "babel src --out-dir lib",
@@ -35,7 +35,7 @@
   "author": "June Domingo <junedomingo@gmail.com>",
   "license": "MIT",
   "bin": {
-    "react-native-rename": "lib/index.js"
+    "react-native-rename": "src/index.js"
   },
   "bugs": {
     "url": "https://github.com/junedomingo/react-native-rename/issues"
