--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,6 @@
     "no-alert": 0,
     "no-console": 0,
     "no-debugger": 1,
-    "newline-before-return": "error",
-    "no-useless-escape": 0
+    "newline-before-return": "error"
   }
 }
