--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-native-rename",
-  "version": "2.4.1",
+  "version": "2.2.2",
   "description": "Rename react-native app with just one command",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "babel src --out-dir lib",
@@ -35,7 +35,7 @@
   "author": "June Domingo <junedomingo@gmail.com>",
   "license": "MIT",
   "bin": {
-    "react-native-rename": "src/index.js"
+    "react-native-rename": "lib/index.js"
   },
   "bugs": {
     "url": "https://github.com/junedomingo/react-native-rename/issues"
@@ -45,6 +45,10 @@
     "cheerio": "^0.22.0",
     "colors": "^1.1.2",
     "commander": "^2.9.0",
+    "mv": "^2.1.1",
+    "path-exists": "^3.0.0",
+    "project-name": "^0.2.6",
+    "replace": "^0.3.0",
     "node-replace": "^0.3.3",
     "shelljs": "^0.7.7"
   },
@@ -52,15 +56,11 @@
     "presets": [
       "es2015",
       "stage-2"
-    ],
-    "plugins": [
-      "transform-unicode-property-regex"
     ]
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.1",
-    "babel-plugin-transform-unicode-property-regex": "^2.0.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.13.0",
     "eslint": "^4.10.0",
